--- a/style.css
+++ b/style.css
@@ -9,15 +9,14 @@
 }
 
 #block-1 {
-  
+
   width: 50px;
   height: 50px;
   background: white;
-  border: 2px solid black;
   position: absolute;
 }
 #block-2 {
-  
+
   width: 50px;
   height: 50px;
   background: white;
@@ -42,4 +41,9 @@
 
 .show_visible {
   display: block;
+  border: 2px solid black;
+}
+
+.show_selected {
+  border-color: blue;
 }
