--- a/style.css
+++ b/style.css
@@ -1,33 +1,32 @@
-#parent {
-  margin-top: -8px;
-  margin-left: 120px;
-  width: 1219px;
-  height: 3000px;
+.content {
+  display: flex;
+  height: 100%;
+}
+
+.buttons {
+  width: 20%;
+}
+
+.control-button {
+  display: block;
+  margin: 10px;
+  width: 100px;
+}
+
+.panel {
+  height: 100%;
+  width: 80%;
   background: white;
   border: 1px solid black;
-  position: absolute;
 }
 
-#block-1 {
-
-  width: 50px;
-  height: 50px;
-  background: white;
-  position: absolute;
-}
-#block-2 {
-
-  width: 50px;
-  height: 50px;
-  background: white;
-  border: 2px solid black;
-  position: absolute;
-  border-radius: 50%;
+.earth {
+  background-image: url('./images/earth.png');
 }
 
-
-
-
+.voltage {
+  background-image: url('./images/voltage.png');
+}
 
 .picture {
   width: 50px;
@@ -37,13 +36,55 @@
 
 .show {
   display: none;
+  width: 30px;
+  height: 60px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  border: solid 1px black;
 }
-
 .show_visible {
   display: block;
-  border: 2px solid black;
 }
 
 .show_selected {
   border-color: blue;
+}
+
+.block-title {
+  position: absolute;
+  top: -22px;
+  -webkit-user-select: none;
+}
+
+ul#contextMenu {
+  position: absolute;
+  width: 200px;
+  display: inline-block;
+  background-color: rgb(0, 89, 255);
+  border-radius: 5px;
+  padding: 10px 0;
+  margin: 0;
+  transition: 0.2s;
+  transform-origin: top left;
+  transform: scale(0);
+}
+li.menuItems {
+  padding: 10px;
+  padding-left: 25px;
+  cursor: pointer;
+  transition: 0.2s;
+  color: white;
+}
+li.menuItems:hover {
+  background-color: #ccc;
+  
+}
+
+
+.rotated {
+
+  -webkit-transform: rotate(90deg);
+  /* Safari y Chrome */
 }
