--- a/style.css
+++ b/style.css
@@ -87,3 +87,21 @@ li.menuItems:hover {
   /* Safari y Chrome */
 }
 
+/*
+.node1{
+	position:absolute;
+	width:100px;
+	background:#666;
+	color : #fff;
+	padding:10px;
+	font-family:Georgia, "Times New Roman", Times, serif
+}
+.node2{
+	position:absolute;
+	width:100px;
+	background:#F99;
+	left: 300px;
+	padding:10px;
+	font-family:Georgia, "Times New Roman", Times, serif
+}
+*/
